ignoring them), and checks for the R version in the DESCRIPTION file
exactly the same way as Rcmd check (so with fewer spurious messages).

Added support for building with the ATLAS optimized BLAS library: on a
PII this speeds up La.svd on a 500x500 matrix by about 30%, and the
multiplication of two 1000x1000 matrices by about 8x. See INSTALL.



rw1030
======

SetupR.exe and miniR* now include the nine `recommended' packages,
so the miniR* distribution needs six floppies rather than four.

Rgui has a new menu `Packages' with items to load packages, to install
packages from CRAN or from local zip files, and to update packages.

The packages list shown by help.start() now includes all packages in
all libraries, but the search index is still confined to the system
library.

The installers set up a file association for *.RData files, so
double-clicking on a *.RData file launches R in that directory and
loads the *.RData file.  Also, a *.RData file can be dropped onto a
shortcut to Rgui (or Rterm) on the desktop or in Windows Explorer.

Drag-and-drop of images (.RData and .rda) and source files (.R)
onto the Rgui.exe console window is now supported.

Profiling (as described in `Writing R Extensions') is now available.

There is a new `Save as PDF' option on the graphics device menu.

bringToTop() can specify the console window in Rgui (as -1).

The default graphics device is now windows() only in interactive use:
otherwise it is postscript().  (This affects the DCOM interface, which
is not interactive use.)

Support for earlier (pre-Feb 2000) mingw compilers has been dropped:
you must use a compiler system that supports --shared and has an
in-memory dlltool.

Rcmd check has been changed to be more robust to reported problems
with Perl's system() command under 16-bit versions of Windows.  It now
works for us under Windows 98.  (It has always worked under NT4 and
2000.)

Rcmd SHLIB no longer adds a version tab to the DLL, as this seemed to