@@ -31,38 +31,31 @@ the mingw site).  There were also problems with several earlier
 versions of the cygwin tools and dll.  To avoid frustration, please
 use our tool set.
 
+We recommend that you use a recent snapshot of the mingw port of gcc
+from http://prdownloads.sourceforge.net/mingw/.  For example, at the
+time of writing, Mingw-1.0.1-20010726.tar.gz based on gcc-2.95.3.
+Just unpack this somewhere and put its bin directory in your path.
 
-We recommend that you use the mingw port of gcc-2.95.2-1 by Mumit
-Khan from http://www.mingw.org/.  (The `portal' gives more precise
-instructions on the current locations.)  You can build R against
-either the crtdll.dll or msvcrt.dll runtime systems, and we strongly
-recommend the latter.  (In particular, locale support is poor with
-crtdll.dll, non-existent under Win9x and crtdll.dll has many memory
-leaks.)
+You can also use the mingw port of gcc-2.95.2-1 by Mumit Khan linked
+from http://www.mingw.org/, but you *cannot* use earlier versions of
+the mingw compilers, for example gcc-2.95.2 (no -1): the symptom is a
+report that `-shared' is not understood.
 
-BEWARE: you *cannot* use earlier versions of the mingw compilers, for
-example gcc-2.95.2 (no -1): the symptom is a report that `-shared' is
-not understood.
-
-An alternative is to use a more recent snapshot of the mingw compiler
-set from http://prdownloads.sourceforge.net/mingw/.  You will need the
-binutils, gcc, gcc-f77, ld, libbfd, mingw32-runtime and w32api
-bundles.
-
-It might also be possible to use the compilers from the cygwin 1.1 net
+It *might* also be possible to use the compilers from the cygwin 1.1 net
 release with the -mno-cygwin -mwin32 flags; the current versions use
 mscrt.dll.  (You will need the cygwin, gcc, mingw32, w32api and
 binutils bundles.  All the recent versions we have tried do not work
 unchanged with -mno-cygwin.)
 
 
-perl5, available via http://www.activestate.com/Products/ActivePerl/
+The Windows port of perl5, available via
+http://www.activestate.com/Products/ActivePerl/.
 
 zip and unzip from the Info-ZIP project (http://www.info-zip.org and
 mirrors, and included in our tools.zip).
 
 The zlib-1.1.3 sources from http://www.info-zip.org/pub/infozip/zlib/
-and mirror.  Unpack this from this directory by 
+and mirrors.  Unpack this from this directory by 
 
 unzip zlib113.zip -d bitmap/zlib
 
